# FolderIconChanger

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  mappings.toml
src/: app_state.rs  config_store.rs  constants.rs  file_watcher.rs  gui.rs  icon_cache.rs  icon_extractor.rs  icon_provider.rs  main.rs  types.rs  utils.rs
