[package]
name = "foldericon"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
rfd = "0.17.2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary