[package]
name = "foldericon"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
rfd = "0.17.2"
image = { version = "0.24", features = ["ico"] }
once_cell = "1.21.4"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Shell",
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
