[package]
name = "foldericon"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version  = "0.34.2", default-features = false, features = [
    "glow",
    "default_fonts"
]}
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
rfd = "0.17.2"
image = { version = "0.24", features = ["ico"] }
notify = "8.2.0"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = 'fat'         # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = 'symbols'   # Strip symbols from binary
